[project]
name = "morpheus-data"
version = "0.1.0"
description = ""
authors = [{name = "Monadical", email = "devops@monadical.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=1.10.7,<2",
    "sqlalchemy==1.4.43",
    "alembic>=1.10.4",
    "psycopg2>=2.9.6",
    "python-dotenv>=1.0.0",
    "firebase-admin>=6.1.0",
    "boto3>=1.26.132",
    "rich>=13.3.5",
    "tqdm>=4.65.0",
    "pillow>=9.5.0",
    "fastapi>=0.95.1",
]

[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"